<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Number 2048</string>
    <string name="orange_text">Restart</string>
    <string name="number2048">2048</string>
    <string name="score">SCORE\n %1$d</string>
    <string name="bestscore">BEST\n %1$s</string>
    <string name="description">Join the numbers and get the <b>2048 tile</b>!</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try again</string>
    <string name="your_score">Your score</string>
    <string name="points">points</string>
    <string name="you_win">You Win!</string>
    <string name="go_on">Go on</string>
    <string name="restart">Restart?</string>
     <string name="yes">Yeah</string>
      <string name="no">Nope</string>
    <string name="action_settings">Settings</string>
        <string name="app_id">254027383811</string>
</resources>
