<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90FFFFFF"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ln"
        android:gravity="center"
        android:text="@string/restart"
        android:textColor="@color/textgray"
        android:textSize="40sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/yes"
        android:textColor="@color/textgray"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginRight="70dp" />
    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/no"
        android:textColor="@color/textgray"
        android:textSize="30sp"
        android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>